# amethyst_voxelmap

./: .gitignore  Cargo.toml  README.md  README.tpl  build.rs  compile_shaders.sh
examples/: voxelmap.rs
examples/assets/: README.md  spritesheet.ron
examples/config/: display.ron
shaders/compiled/: voxels.frag.spv  voxels.vert.spv
shaders/src/: voxels.vert
src/: bounds.rs  lib.rs  map.rs  pass.rs  pod.rs  storage.rs
